--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue": "^2.3.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^2.6.0",
-    "vuex": "^2.4.0"
+    "vuex": "^2.4.0",
+    "vue-amap": "^0.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
